[package]
name = "bdk-crates-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bdk = { version = "0.30.2", features = ["sqlite", "keys-bip39", "rpc", "electrum"] }
bdk_chain = "0.21.1"
bdk_electrum = "0.21.0"
bdk_esplora = "0.20.1"
bdk_wallet = {version="1.2.0", features=["rusqlite", "keys-bip39"]}
dotenv = "0.15.0"
rusqlite = "0.31.0"

